<resources>
    <string name="app_name">TIP CALCULATOR</string>
    <string name="app_title">TIP CALCULATOR</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="cost">Cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="button">CALCULATE</string>
    <string name="tip_amount">Tip Amount:%s</string>
    <string name="round_up_tip">Round up tip</string>
    <string name="okay_15">Okay(15%)</string>
</resources>